--- a/app/javascript/stylesheets/common.scss
+++ b/app/javascript/stylesheets/common.scss
@@ -4,3 +4,45 @@ body {
     color: #262626;
   }
   
+.btn-primary {
+  color: #333;
+    background-color: #fff;
+    border-color: #333;
+}
+
+.home_text1 {
+  display: block;
+  margin: 60px auto 0;
+  text-align: center;
+}
+
+.home_text2 {
+  text-align: center;
+  margin-top: 30px;
+}
+
+@media screen and (max-width: 991px) { 
+  .navbar-nav {
+    background: #fff;
+    text-align: left;
+    align-items: flex-start!important;
+
+    li {
+      width: 100%;
+      border-bottom: 1px solid #ddd;
+      margin: 0;
+      padding: 10px;
+      &:last-child {
+        border: none;
+        padding-left: 25px;
+      }
+      a {
+        border: none;
+      }
+    }
+  }
+}
+
+#navbarSupportedContent {
+  z-index: 1000!important;
+}
