--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -6,11 +6,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-md-auto align-items-center">
-        <li>
-   <%= link_to "投稿", new_post_path, class: "btn btn-primary" %>
+      <li>
+        <%= link_to "投稿一覧", posts_path, class: "btn btn-primary" %>
         </li>
         <li>
-          <%= link_to "", "user_path(current_user)", class: "nav-link commonNavIcon profile-icon" %>
+        <%= link_to "投稿", new_post_path, class: "btn btn-primary" %>
+        </li>
+        <li>
+          <%= link_to "", user_path(current_user), class: "nav-link commonNavIcon profile-icon" %>
         </li>
       </ul>
     </div>
